Replace deprecated eslint-plugin-javascript and use backticks in tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
     "sourceType": "module"
   },
   "rules": {
+    "quotes": ["error", "single", { "allowTemplateLiterals": true }]
   },
   "globals": {
     "describe": "readonly",
