--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "lint-fix": "eslint . --fix",
     "prepush": "yarn lint && yarn test"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "npm run prepush"
+    }
+  },
   "keywords": [
     "yeoman-generator"
   ],
@@ -33,6 +38,7 @@
     "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-zero-config": "^2.2.9",
+    "husky": "^8.0.3",
     "mocha": "8.4.0",
     "yeoman-assert": "^3.1.1",
     "yeoman-environment": "^3.19.3",
