--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "generator-integrity",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "A Next.js + Prisma + Cypress project generator using current tools and frameworks at Integrity Web Consulting.",
   "author": "Integrity Web Consulting",
   "repository": {
     "type": "git",
     "url": "https://github.com/bpkennedy/generator-integrity.git"
   },
-  "type": "module",
   "scripts": {
     "test": "mocha test/content.js --timeout 8000",
     "lint": "eslint .",
@@ -26,9 +25,9 @@
   "files": [
     "generators"
   ],
-  "main": "generators/app/index.mjs",
+  "main": "generators/app/index.js",
   "bin": {
-    "generator-integrity": "generators/app/index.mjs"
+    "generator-integrity": "generators/app/index.js"
   },
   "dependencies": {
     "yeoman-generator": "^5.9.0"
@@ -38,14 +37,14 @@
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-zero-config": "^2.2.9",
     "husky": "^8.0.3",
     "mocha": "8.4.0",
     "yeoman-assert": "^3.1.1",
     "yeoman-environment": "^3.19.3",
-    "yeoman-test": "^7.4.0"
+    "yeoman-test": "^6.3.0"
   },
   "resolutions": {
     "**/wrap-ansi": "7.0.0"
