--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "generator-integrity",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A Next.js + Prisma + Cypress project generator using current tools and frameworks at Integrity Web Consulting.",
   "author": "Integrity Web Consulting",
   "repository": {
     "type": "git",
     "url": "https://github.com/bpkennedy/generator-integrity.git"
   },
+  "type": "commonjs",
   "scripts": {
     "test": "mocha test/content.js --timeout 8000",
     "lint": "eslint .",
@@ -21,7 +22,7 @@
   "keywords": [
     "yeoman-generator"
   ],
-  "license": "MIT",
+  "license": "UNLICENSED",
   "files": [
     "generators"
   ],
