--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-integrity",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A Next.js + Prisma + Cypress project generator using current tools and frameworks at Integrity Web Consulting.",
   "author": "Integrity Web Consulting",
   "repository": {
@@ -9,10 +9,12 @@
   },
   "type": "commonjs",
   "scripts": {
+    "build": "webpack",
     "test": "mocha test/content.js --timeout 8000",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
-    "prepush": "yarn lint && yarn test"
+    "prepush": "yarn lint && yarn test",
+    "prepublish": "yarn build"
   },
   "husky": {
     "hooks": {
@@ -26,14 +28,17 @@
   "files": [
     "generators"
   ],
-  "main": "generators/app/index.js",
+  "main": "dist/bundle.js",
   "bin": {
-    "generator-integrity": "generators/app/index.js"
+    "generator-integrity": "dist/bundle.js"
   },
   "dependencies": {
     "yeoman-generator": "^5.9.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-loader": "^9.1.3",
     "chai": "^4.3.7",
     "eslint": "^8.0.1",
     "eslint-config-standard": "^17.1.0",
@@ -43,6 +48,9 @@
     "eslint-plugin-zero-config": "^2.2.9",
     "husky": "^8.0.3",
     "mocha": "8.4.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0",
     "yeoman-assert": "^3.1.1",
     "yeoman-environment": "^3.19.3",
     "yeoman-test": "^6.3.0"
