Update to Next13 ('App'), update packages, clean up and streamline

--- a/generators/app/templates/.eslintrc.json
+++ b/generators/app/templates/.eslintrc.json
@@ -3,7 +3,5 @@
     "browser": true,
     "node": true
   },
-  "extends": "next/core-web-vitals",
-  "plugins": ["cypress"],
-  "ignorePatterns": ["cypress/report/**/*.json"]
+  "extends": ["next/core-web-vitals", "next/typescript"]
 }
