--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "lint": "eslint .",
     "lint-fix": "eslint . --fix"
   },
+  "engines": {
+    "node": "^18.x"
+  },
   "keywords": [
     "yeoman-generator"
   ],
