--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-integrity",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A Next.js + Prisma + Cypress project generator using current tools and frameworks at Integrity Web Consulting.",
   "author": "Integrity Web Consulting",
   "repository": {
@@ -29,7 +29,8 @@
     "create-integrity-app": "./generator-integrity.js"
   },
   "dependencies": {
-    "yeoman-generator": "^5.9.0"
+    "yeoman-generator": "^5.9.0",
+    "yeoman-environment": "^3.19.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.9",
@@ -47,7 +48,6 @@
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0",
     "yeoman-assert": "^3.1.1",
-    "yeoman-environment": "^3.19.3",
     "yeoman-test": "^6.3.0"
   },
   "resolutions": {
