--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "<%= name %>",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -37,7 +37,7 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.2",
-    "postcss": "^8",
+    "postcss": "^8.5.6",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "prisma": "^5.21.1",
